<resources>
    <string name="app_name">Menlo Lookaround</string>
    <string name="name_var">placeName</string>
    <string name="address_var">placeAddress</string>
    <string name="desc_var">placeDescription</string>
    <string name="img_var">placeImage</string>
    <string name="site_var">placeSite</string>
    <string name="loc_var">placeLocation</string>
    <string name="about">About</string>
    <string name="more">For More Info</string>
    <string name="webpage">Website</string>
    <string name="map">Locate</string>
    <string name="sights">Sights</string>
    <string name="restaurants">Restaurants</string>
    <string name="landmarks">Landmarks</string>
    <string name="coffee">Coffee Shops</string>
    <string name="menloPark">Menlo Park</string>
    <string name="homeOfFB">Home Of Facebook</string>
    <string name="R1_name_Evvia">Evvia</string>
    <string name="R1_address_Evvia">420 Emerson St, Palo Alto, CA 94301-1604</string>
    <string name="R1_desc_Evvia">Sister restaurant of Kokkari, Evvia has been serving beautiful and
        elegant Greek cuisine since 1995. Fabulous fish, savory roasted meats, and sun-soaked
        vegetables are jazzed up with a spritz of lemon, a little olive oil, and herbs.
        There is perfection in simplicity.</string>
    <string name="R1_site_Evvia">https://evvia.net/</string>
    <string name="R1_location_Evvia">37.4450585, -122.2338338</string>
    <string name="R2_name_Orens">Oren\'s Hummus Shop</string>
    <string name="R2_address_Orens">261 University Ave, Palo Alto, CA 94301-1714</string>
    <string name="R2_desc_Orens">Fresh and healthy is the name of the game here, where delicious
        bites are fired up with all natural ingredients and a lot of homemade love.</string>
    <string name="R2_site_Orens">http://www.orenshummus.com/</string>
    <string name="R2_location_Orens">37.445717, -122.1643617</string>
    <string name="R3_name_Refuge">The Refuge</string>
    <string name="R3_address_Refuge">Crane Street, Menlo Park, CA</string>
    <string name="R3_desc_Refuge">The REFUGE thrives in the quiet, unassuming towns of San Carlos,
        CA and Menlo Park, CA where the hand-carved, meltingly tender, boldly flavored navel
        pastrami is sending shockwaves through the gastronomic consciousness of patrons who call
        it “the greatest this planet will see in some time.</string>
    <string name="R3_site_Refuge">http://www.refugesc.com/</string>
    <string name="R3_location_Refuge">37.4515986, -122.1947601</string>
    <string name="R4_name_Tamarine">Tamarine Restaurant</string>
    <string name="R4_address_Tamarine">546 University Ave, Palo Alto, CA 94301-1901</string>
    <string name="R4_desc_Tamarine">Tamarine is a contemporary Vietnamese restaurant that features
        the light but flavor-intensive culinary delicacies of Vietnam. The restaurant offers a
        menu based on small plates, promoting the Vietnamese tradition of the \'shared\' meal in
        which food is shared and enjoyed with those close. Tamarine\'s small plate entrees are
        enjoyed with the pairing of a variety of aromatic, flavor infused rice, designed to be
        mixed and matched to create a truly unique flavor experience. Along with culinary delicacies
        of Vietnam, the restaurant showcases the works of emerging artists from Vietnam and other
        Southeast Asian countries.</string>
    <string name="R4_site_Tamarine">https://tamarinerestaurant.com/</string>
    <string name="R4_location_Tamarine">37.4488055, -122.2283774</string>
    <string name="R5_name_MenloGrill">Menlo Grill Bistro and Bar</string>
    <string name="R5_address_MenloGrill">100 El Camino Real, Menlo Park, CA 94025-5235</string>
    <string name="R5_desc_MenloGrill">A classic American grill with a warm and inviting neighborhood
        feel. The relaxed setting offers casual, yet sophisticated, dining with a menu that
        highlights regional and seasonal ingredients. An extensive wine-by-the-glass and craft brew
        selection is also featured.Open for breakfast, lunch, dinner and late night snacks.</string>
    <string name="R5_site_MenloGrill">http://www.menlogrill.com/</string>
    <string name="R5_location_MenloGrill">37.447625, -122.2417501</string>
    <string name="R6_name_Sundance">Sundance The Steakhouse</string>
    <string name="R6_address_Sundance">1921 El Camino Real, Palo Alto, CA 94306-1122</string>
    <string name="R6_desc_Sundance">Since its opening in 1974, prime steaks and martinis have never
        gone out of style at this Palo Alto institution. The atmosphere is very clubby with
        fireplaces, dark wood, sports memorabilia and plush leather booths tucked into the many
        nooks throughout the dining room. Famous for their slow-roasted prime rib &amp; hand-cut
        U.S.D.A Prime Steaks, they also offer fresh seafood, cold water lobster tail &amp; succulent
        shellfish. The 23 oz. Bone-In Rib eye Steak is the \"Boss\' Favorite\" while the Double Cut
        Filet Mignon runs a close second. Sundance is respected for serving the best food money can
        buy coupled with value &amp; simplicity – a welcome relief for serious food &amp; steak
        aficionados. The menu is supported by an award-winning wine list that features over 400
        selections focusing on highly allocated Napa Valley Cabernets &amp; Sonoma Pinot Noirs.
        Exceptional ratings &amp; numerous restaurant awards rank Sundance the Steakhouse as a true
        dining destination.</string>
    <string name="R6_site_Sundance">http://www.menlogrill.com/</string>
    <string name="R6_location_Sundance">37.4285178, -122.2196353</string>
    <string name="R7_name_Madera">Madera</string>
    <string name="R7_address_Madera">2825 Sand Hill Road, Menlo Park, CA 94025</string>
    <string name="R7_desc_Madera">Madera Restaurant Honored with One Star by Michelin and Wine
        Spectator\'s Best of Award of Excellence 2012. A comfortably elegant ambiance, picturesque
        views and outdoor terraces welcome guests and Silicon Valley locals to Madera. Featuring an
        open artisan wood-burning kitchen and extensive wine list, Madera serves rustic American
        cuisine that celebrates the culinary traditions of the Bay Area In addition to indoor and
        outdoor dining, Madera offers two private dining rooms with private terraces and cozy
        fireplaces. The Lemon Room seats up to 10 guests, and the Orange Room up to 14 guests. This
        Menlo Park restaurant is open daily for breakfast, lunch and dinner and for Sunday brunch as
        well.</string>
    <string name="R7_site_Madera">http://www.maderasandhill.com/</string>
    <string name="R7_location_Madera">37.4197281, -122.2150898</string>
    <string name="R8_name_Flea">Flea Street Cafe</string>
    <string name="R8_address_Flea">3607 Alameda de las Pulgas, West Menlo Park, CA 94025</string>
    <string name="R8_desc_Flea">A restaurant which makes a difference by using food and wine raised,
        harvested, and produced sustainably and regionally. Buying locally provides great quality,
        boosts our economy, protects our farmland, enhances our local food systems, and keeps us
        and our environment healthy. We support and use as many organic ingredients as possible-those
        produced without petrochemicals, artificial coloring, growth stimulants, antibiotics or
        pesticides.</string>
    <string name="R8_site_Flea">https://www.cooleatz.com/flea-st-cafe</string>
    <string name="R8_location_Flea">37.4318449, -122.203307</string>
    <string name="R9_name_Stacks">Stacks</string>
    <string name="R9_address_Stacks">600 Santa Cruz Ave, Menlo Park, CA 94025-4503</string>
    <string name="R9_desc_Stacks">A restaurant whose menu items, the simple American classics, are
        homemade with farm fresh eggs, real butter, and heavy cream. Our fruits and vegetables are
        market fresh. We use only the highest quality of Midwest Hormel meat products, such as our
        apple-wood smoked bacon and our honey hams. We use the famous Aidells\' chicken apple sausage,
        and our burgers are #1 USDA Choice Angus, fresh, never frozen.</string>
    <string name="R9_site_Stacks">http://www.stacksrestaurant.com/HP_static.html</string>
    <string name="R9_location_Stacks">37.4534159, -122.1855036</string>
    <string name="R10_name_SqueezeIn">Squeeze In</string>
    <string name="R10_address_SqueezeIn">3710 Florence St, Redwood City, CA 94063–4418</string>
    <string name="R10_desc_SqueezeIn">At just 10 feet, 3 inches wide, and with only 39 seats, guests
        would literally have to \'squeeze in\' to enjoy their breakfast at the little restaurant. As
        the list of omelette options grew, so did the popularity of the restaurant, and by the mid
        80\'s it was considered a true Truckee institution. Not some business, not a restaurant,
        THIS restaurant: the Squeeze In. Between the scrumptious food, the signatures on the wall,
        and the undeniable hippie vibe, they knew that it was one day their destiny.</string>
    <string name="R10_site_SqueezeIn">https://www.squeezein.com/</string>
    <string name="R10_location_SqueezeIn">37.4787187, -122.1891855</string>
    <string name="S1_name_Facebook">Facebook Headquarters</string>
    <string name="S1_address_Facebook">Facebook Headquarters, 1 Hacker Way, Menlo Park, CA, USA</string>
    <string name="S1_desc_Facebook">Whether you \'like\' it or not, Facebook has pretty much taken
        over the world and all of our social lives just within the past few years, and it all
        started in the small city of Menlo Park. An iconic Silicon Valley site and hometown success,
        the original Facebook Headquarters is a must-see if you\'re visiting the Peninsula. Snap a
        pic next to the big thumbs-up and be THAT person on your high school friends\' news feeds.</string>
    <string name="S1_site_Facebook">https://www.facebook.com/</string>
    <string name="S1_location_Facebook">37.4847086, -122.1499346</string>
    <string name="S2_name_Keplers">Kepler\'s Books</string>
    <string name="S2_address_Keplers">Kepler\'s Books, 1010 El Camino Real, Menlo Park, CA, USA</string>
    <string name="S2_desc_Keplers">Dating back to 1955, this independent bookstore is a local
        landmark. Due to the decline of sales at bookstores in general, Kepler\'s found itself in the
        same situation as many bookstores and had been forced to close in 2005. Thousands of loyal
        customers and local community members responded with demonstrations on the plaza and, within
        weeks, Kepler\'s was back! With several events happening all the time, it isn\'t uncommon to
        see well-known authors at a signing. Local celebs like Betsy Franco [James Franco\'s mom] and
        even James himself have also been known to stop at Kepler\’s.</string>
    <string name="S2_site_Keplers">http://www.keplers.com/</string>
    <string name="S2_location_Keplers">37.453569, -122.1843557</string>
    <string name="S3_name_CheekyMToys">Cheeky Monkey Toys</string>
    <string name="S3_address_CheekyMToys">Cheeky Monkey Toys, 640 Santa Cruz Ave, Menlo Park, CA, USA</string>
    <string name="S3_desc_CheekyMToys">Locally owned by Anna and Dexter Chow, Cheeky Monkey Toys is
        a paradise for kids of all ages. Lining the front counters, it\'s like a real life Zonko\'s
        Joke Shop with fun little gag gifts like fake vomit and whoopee cushions for the immature
        inner child in all of us. From Legos and Hot Wheels to all the latest in Princess dress-up
        chic, this mom-and-pop store has got it all and more.</string>
    <string name="S3_site_CheekyMToys">https://www.cheekymonkeytoys.com/</string>
    <string name="S3_location_CheekyMToys">37.4528571, -122.1839578</string>
    <string name="S4_name_SharonPark">Sharon Park</string>
</resources>