<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pratiksymz.android.menlolookaround.activities.PlaceDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            app:cardCornerRadius="0dp">

            <ImageView
                android:id="@+id/detailed_image"
                style="@style/listItemImageStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detailed_image_height"
                android:layout_gravity="center_horizontal"
                tools:src="@drawable/s1_facebook_final" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/about"
            style="@style/listDetailsTextStyle"
            android:text="@string/about"
            android:textColor="#455768"
            android:textSize="@dimen/listDetailsAboutTextSize" />

        <com.uncopt.android.widget.text.justify.JustifiedTextView
            android:id="@+id/detailed_desc"
            style="@style/listDetailsTextStyle"
            android:layout_gravity="center"
            android:padding="@dimen/detailed_text_padding"
            tools:text="@string/S1_desc_Facebook" />

        <TextView
            android:id="@+id/more_info"
            style="@style/listDetailsTextStyle"
            android:text="@string/more"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/link_webpage"
                style="@style/DetailedIconStyle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_link"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/webpage"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/link_map"
                style="@style/DetailedIconStyle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_map"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>